# AdventOfCode_CPP

./: .gitignore  AdventOfCode.sln  CMakeLists.txt  CMakeSettings.json
AdventOfCode.2024/: .cpp  AdventOfCode.2024.vcxproj  AdventOfCode.2024.vcxproj.filters  Aoc2024D01.cpp  Aoc2024D01.h  pch.h
AdventOfCode.2024/D01/: Aoc2024D01.cpp  Aoc2024D01.h
AdventOfCode.2024/D02/: Aoc2024D02.cpp  Aoc2024D02.h
AdventOfCode.2024/D03/: Aoc2024D03.cpp  Aoc2024D03.h  Lexer.cpp  Lexer.h
AdventOfCode.2024/D04/: Aoc2024D04.cpp  Aoc2024D04.h  Grid.cpp  Grid.h  Vec2.cpp  Vec2.h
AdventOfCode.2024/D05/: Aoc2024D05.cpp  Aoc2024D05.h
AdventOfCode.2024/D06/: Aoc2024D06.cpp  Aoc2024D06.h
AdventOfCode.2024/D07/: Aoc2024D07.cpp  Aoc2024D07.h
AdventOfCode.2024/D08/: Aoc2024D08.cpp  Aoc2024D08.h
AdventOfCode.2024/Shared/: Grid.cpp  Grid.h  Vec2.cpp  Vec2.h
AdventOfCode.Bootstrap/: AdventOfCode.Bootstrap.cpp  AdventOfCode.Bootstrap.vcxproj  AdventOfCode.Bootstrap.vcxproj.filters  LogViewer.h  MenuView.h  ResultViewer.h  imgui.ini  imgui_config.h
AdventOfCode.Bootstrap/Benchmark/: AdventOfCode.Bootstrap.exe.recipe
AdventOfCode.ImGuiWrapper/: AdventOfCode.ImGuiWrapper.vcxproj  AdventOfCode.ImGuiWrapper.vcxproj.filters
AdventOfCode.Shared/: AdventOfCode.Shared.cpp  AdventOfCode.Shared.vcxproj  AdventOfCode.Shared.vcxproj.filters  AocDayPartResult.h  AocRegistry.cpp  AocRegistry.h  IAocDay.cpp  IAocDay.h  ILogger.h  MultiLogger.h  StdoutLogger.h  VectorLogger.h  utils.h
AdventOfCode.Visualization/: AdventOfCode.Visualization.vcxproj  AdventOfCode.Visualization.vcxproj.filters  BaseWindow.cpp  BaseWindow.h  IRenderable.h  PseudoRenderable.h  pch.h
Benchmark/: AdventOfCode.Shared.lib
lib/: README.md
lib/SFML-3.0.0/: .gitignore  README.md
